# WeatherCaster

./: .gitignore  README.md  pyproject.toml  template.env
src/: agent_prompt.py  cli.py  config.py  gradio_ui.py  weather_caster.py
src/application/: formatting.py  weather_caster.py
src/configs/: agent_prompt.py  config.py  weather_questions.py
src/model_definition/: final_response.py  response_types.py
src/tools/: weather_tools.py
